# CaffeineClustering

./: CMakeLists.txt  ClusteringConfig.cmake.in  README.md
examples/: clustering_test.cpp  example_usage.cpp
include/SciData/: datagrid3d.h  grid_clusterer.h  vector_comparator.h  vectorclusterer.h  vectorfield3d.h
include/Utilities/: array3d.h  boost_math_utilities.h  floating_point.h  index3d_hashing.h  iterable_priority_queue.h  log.h  math3d.h  math_backend.h  mathfu_utilities.h
python/: bindings.cpp
src/: boost_math_utilities.cpp  floating_point.cpp  index3d_hashing.cpp  math3d.cpp  mathfu_utilities.cpp  vector_comparator.cpp  vectorclusterer.cpp
